tests/snapshots/lib__snapshots__report@target.env_filter.snap
---
source: tests/snapshots.rs
assertion_line: 73
expression: "example::log::target=level"
---

  ⚠ 1 directives were ignored as invalid

Error: tracing_filter::simple::Warning::InvalidLevel

  ⚠ invalid level directive specified
   ╭────
 1 │ example::log::target=level
   ·                      ──┬──
   ·                        ╰── this level is invalid
   ╰────
  help: valid directives are OFF, ERROR, WARN, INFO, DEBUG, or TRACE

